# Voice-Ai-Livekit

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
agent/: agent.py  agent_minimal_working.py  model_selector.py
config/: config.py  dispatch_rules.json  inbound_trunk.json  outbound_trunk.json
memory/: conversation_memory.py  storage.py
models/: context.py  prompts.py
prompts/: manager.py  renderer.py
prompts/templates/: base_assistant.json  phone_receptionist.json  support_agent.json
scripts/: init_memory.py  make_call.py  setup_sip.py  view_memory.py
telephony/: inbound_handler.py  outbound_handler.py  sip_config.py
tests/: conftest.py  test_memory.py  test_models.py  test_prompts.py  test_storage.py
